- Added fake motion blur module that calculates particle size based on how fast it moves
- Added turbulence vector field module alongside with adapters to convert from polar to cartesian and back
- Added tab so multiple projects can be worked on at once
- Now last open/save/export locations are remembered to suggest in dialog as default
- New architecture to support addons and multi project behaviour (.tls projects now how to save and behave as well as .bvb projects)
- Added Spine animation bone attachment tool - big deal.
- Attractor module - makes particles start in one direction but then move towards attractor
- Recently Opened files menu now remembers your last open
- Open/Save/Export dialogs now remember your last choice
- Added Export As option, which means that export is a quick export to last location with Ctrl+E, while export as will ask for path
- Fixed bug with emitters not deleting properly
- Added Undo/Redo functionality using snapshot method.

[1.0.5]
- legacy libGDX particle file importer full functionality
- Modules can now be renamed with double click on the title
- Full Copy/Paste functionality for modules from emitter to the emitter. Works between different Talos windows.
- Additive blend mode support in renderer and config properties for emitter
- Global dynamic user set vars (global scope input)
- Dynamic Drag point support for visualizing vector2 values in the preview window
- Filtered search drop-down for module creation
- Dropping curve in empty location auto-open's module popup.
- Preview supports background and foreground images.
- Viewport width can be changed with exact numbers in input box instead of just scroll for zoom
- Particle in the preview window can be moved with right-click
- Module multi-select with rectangle hit, with SHIFT, and with Ctrl+A
- Categorized module list
- Some modules now have their default values exposed as input fields