@@ -1,0 +1,1 @@
+{"emitters":[{"name":"emitter","modules":[{"class":"ParticleModule","index":0},{"class":"EmitterModule","index":1,"delay":0,"duration":2,"rate":20},{"class":"TextureModule","index":3,"regionName":"fire"},{"class":"EmConfigModule","index":4,"additive":true,"attached":false,"continuous":true,"aligned":false},{"class":"DynamicRangeModule","index":5,"points":[{"x":0,"y":0.32557845},{"x":0.20918834,"y":0.5891435},{"x":0.59694374,"y":0.2868179},{"x":1,"y":0.14728291}],"lowMin":0,"lowMax":0,"highMin":3,"highMax":5},{"class":"DynamicRangeModule","index":6,"points":[{"x":0,"y":0.364338},{"x":1,"y":0.6124}],"lowMin":0,"lowMax":0,"highMin":360,"highMax":360},{"class":"DynamicRangeModule","index":7,"points":[{"x":0,"y":1},{"x":0.21939304,"y":0.19379584},{"x":1,"y":0}],"lowMin":90,"lowMax":90,"highMin":135,"highMax":45},{"class":"DynamicRangeModule","index":8,"points":[{"x":0,"y":0.4883676}],"lowMin":0,"lowMax":0,"highMin":5,"highMax":5},{"class":"GradientColorModule","index":9,"points":[{"r":0.87058824,"g":0.3372549,"b":0.21568628,"pos":0},{"r":1,"g":0.26666668,"b":0.101960786,"pos":0.19266391},{"r":0.56078434,"g":0.5058824,"b":0.44313726,"pos":1}]},{"class":"CurveModule","index":10,"points":[{"x":0,"y":0},{"x":0.0987707,"y":0.7916629},{"x":0.49383116,"y":0.5833289},{"x":0.7654361,"y":0.12499555},{"x":1,"y":0}]},{"class":"DynamicRangeModule","index":11,"points":[{"x":0,"y":1},{"x":0.63776195,"y":1},{"x":1,"y":0.7286869}],"lowMin":0,"lowMax":0,"highMin":3.5,"highMax":4}],"connections":[{"moduleFrom":3,"slotTo":2},{"moduleFrom":4,"moduleTo":1,"slotTo":3},{"moduleFrom":5,"slotTo":13},{"moduleFrom":6,"slotTo":7},{"moduleFrom":7,"slotTo":11},{"moduleFrom":8,"slotTo":5},{"moduleFrom":9,"slotTo":9},{"moduleFrom":10,"slotTo":10},{"moduleFrom":11,"slotTo":4}]}],"metadata":{"resources":["fire"]}}
